feat: implement OTP generation and verification with rate limiting and client tracking

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.8.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/uuid": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "express-rate-limit": "^7.5.0",
     "otp-generator": "^4.0.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
