--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.8.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/uuid": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "otp-generator": "^4.0.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
