feat: enhance OTP generation and verification with table ID support, RSA encryption, and improved rate limiting

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.7",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
+    "node-rsa": "^1.1.1",
     "otp-generator": "^4.0.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
