--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "@prisma/client": "^6.8.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/uuid": "^10.0.0",
+    "@nestjs/bull": "^1.1.1",
+    "@nestjs/cache-manager": "^2.2.1",
+    "bull": "^4.12.2",
+    "cache-manager": "^5.4.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "express-rate-limit": "^7.5.0",
-    "helmet": "^8.1.0",
     "node-rsa": "^1.1.1",
     "otp-generator": "^4.0.1",
     "prisma": "^6.8.2",
