--- a/package.json
+++ b/package.json
@@ -20,57 +20,55 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.2.0",
-    "@nestjs/throttler": "^6.4.0",
-    "@prisma/client": "^6.8.2",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/uuid": "^10.0.0",
-    "@nestjs/bull": "^11.0.1",
-    "@nestjs/cache-manager": "^2.2.1",
-    "bull": "^4.12.2",
-    "cache-manager": "^5.4.0",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/throttler": "^5.1.1",
+    "@prisma/client": "^5.7.1",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/uuid": "^9.0.7",
+    "@nestjs/bull": "^10.0.1",
+    "@nestjs/cache-manager": "^2.1.1",
+    "bull": "^4.12.0",
+    "cache-manager": "^5.3.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "cookie-parser": "^1.4.7",
-    "express-rate-limit": "^7.5.0",
+    "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
+    "express-rate-limit": "^7.1.5",
     "node-rsa": "^1.1.1",
     "otp-generator": "^4.0.1",
-    "prisma": "^6.8.2",
-    "reflect-metadata": "^0.2.2",
+    "prisma": "^5.7.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.3.0",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.101",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "jest": "^29.7.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.1.1",
     "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
