--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^10.0.1",
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -29,8 +31,6 @@
     "@prisma/client": "^5.7.1",
     "@types/cookie-parser": "^1.4.6",
     "@types/uuid": "^9.0.7",
-    "@nestjs/bull": "^10.0.1",
-    "@nestjs/cache-manager": "^2.1.1",
     "bull": "^4.12.0",
     "cache-manager": "^5.3.1",
     "cache-manager-redis-store": "^3.0.1",
@@ -43,6 +43,7 @@
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "twilio": "^5.7.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
